package com.auction.model.auction;

public interface AuctionObserver {
    void update(Auction auction);
    
}