package com.auction.model.item;

public class Electronics extends Item {
    public Electronics(String name) {
        super(name);
    }
}
