package com.auction.model.item;

public class Vehicle extends Item {
    public Vehicle(String name) {
        super(name);
    }
}
